Update function import

--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -37,11 +37,11 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Import \"common\" module from ooi-data-explorations library\n",
-    "from ooi_data_explorations import common\n",
+    "# Import funtions form \"common\" module in ooi-data-explorations library\n",
+    "from ooi_data_explorations.common import load_gc_thredds\n",
     "\n",
     "# Import qartod_testing project modules\n",
-    "import qartod_testing.data_processing as dp"
+    "from qartod_testing.data_processing import ooinet_gold_copy_request, build_data_path, dev1_data_request"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "548967d3",
    "metadata": {
     "tags": []
@@ -73,9 +73,9 @@
    "outputs": [],
    "source": [
     "# Setup parameters needed to request data\n",
-    "refdes = \"CP01CNSM-RID27-03-CTDBPC000\"\n",
+    "refdes = \"GI03FLMB-RIM01-02-CTDMOG064\"\n",
     "method = \"recovered_inst\"\n",
-    "stream = \"ctdbp_cdef_instrument_recovered\"\n",
+    "stream = 'ctdmo_ghqr_instrument_recovered'\n",
     "\n",
     "# Site, node, and sensor info from deconstructed reference designator\n",
     "[site, node, sensor] = refdes.split('-', 2)"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "38249131",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading and Processing Data Files: 100%|██████████| 14/14 [01:06<00:00,  4.78s/it]\n"
+      "Downloading and Processing Data Files: 100%|██████████| 8/8 [00:13<00:00,  1.71s/it]\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     "# Routine in data_processing module from this project to download the gold copy THREDDs datasets\n",
     "# Variable 'files' contains list of catalog URLs for downloaded datasets \n",
     "\n",
-    "files = dp.ooinet_gold_copy_request(refdes, method, stream)"
+    "files = ooinet_gold_copy_request(refdes, method, stream)"
    ]
   },
   {
@@ -148,7 +148,7 @@
    ],
    "source": [
     "# Load data with common module\n",
-    "data = common.load_gc_thredds(site,node,sensor,method,stream)    # Request the gold copy data through THREDDs catalog\n",
+    "data = load_gc_thredds(site,node,sensor,method,stream)    # Request the gold copy data through THREDDs catalog\n",
     "\n",
     "# I couldn't use dask with PCO2W data request since some of the data was an object data type, which is not supported for auto-chunking.\n",
     "\n",
@@ -651,7 +651,7 @@
    "outputs": [],
    "source": [
     "# Save downloaded data locally\n",
-    "prod_path = dp.build_data_path(refdes, method, stream, prefix='prod', folder='external') # added this folder='external' as I was updating the notebook. not sure if I want to put requested data in interim or external going forward\n",
+    "prod_path = build_data_path(refdes, method, stream, prefix='prod', folder='external') # added this folder='external' as I was updating the notebook. not sure if I want to put requested data in interim or external going forward\n",
     "\n",
     "ds_prod.to_netcdf(path=prod_path)"
    ]
@@ -751,7 +751,7 @@
    ],
    "source": [
     "# Connect to ci-west vpn before running this cell to download data\n",
-    "data = dp.dev1_data_request(site, node, sensor, method, stream, params)"
+    "data = dev1_data_request(site, node, sensor, method, stream, params)"
    ]
   },
   {
