--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -48,7 +48,7 @@
     "import dask\n",
     "from dask.diagnostics import ProgressBar\n",
     "\n",
-    "import qartod_testing.data_processing as dp"
+    "from qartod_testing.data_processing import qartod_gross_range_test, timeseries_dict_to_xarray, qartod_climatology_test, build_data_path"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# Set reference designator, data stream, and method \n",
-    "refdes = \"CP01CNSM-RID27-03-CTDBPC000\"        \n",
+    "refdes = \"GI01SUMO-RID16-03-CTDBPF000\"        \n",
     "method = \"recovered_inst\"\n",
     "stream = \"ctdbp_cdef_instrument_recovered\"\n",
     "\n",
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "14"
+       "7"
       ]
      },
      "execution_count": 3,
@@ -108,12 +108,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d0f14319-c62b-4e23-b22a-0f1f25789b73",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 31\u001b[0m\n\u001b[1;32m     29\u001b[0m gross_range_results \u001b[38;5;241m=\u001b[39m dp\u001b[38;5;241m.\u001b[39mtimeseries_dict_to_xarray(gross_range_results, ds)\n\u001b[1;32m     30\u001b[0m gross_range_results[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeployment\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m ds[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeployment\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;66;03m# used in sorting and merging all deployments\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m climatology_results \u001b[38;5;241m=\u001b[39m dp\u001b[38;5;241m.\u001b[39mqartod_climatology_test(refdes, stream, test_parameters, ds)\n\u001b[1;32m     32\u001b[0m climatology_results \u001b[38;5;241m=\u001b[39m dp\u001b[38;5;241m.\u001b[39mtimeseries_dict_to_xarray(climatology_results, ds)\n\u001b[1;32m     33\u001b[0m climatology_results[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeployment\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m ds[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeployment\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[0;32m~/code/qartod_testing/qartod_testing/data_processing.py:449\u001b[0m, in \u001b[0;36mqartod_climatology_test\u001b[0;34m(refdes, stream, test_parameters, ds)\u001b[0m\n\u001b[1;32m    446\u001b[0m         \u001b[38;5;66;03m# print([pmin, pmax])\u001b[39;00m\n\u001b[1;32m    447\u001b[0m \u001b[38;5;66;03m# Run the climatology test\u001b[39;00m\n\u001b[1;32m    448\u001b[0m time \u001b[38;5;241m=\u001b[39m ds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m--> 449\u001b[0m param_results \u001b[38;5;241m=\u001b[39m climatology_test(c,\n\u001b[1;32m    450\u001b[0m                                 inp\u001b[38;5;241m=\u001b[39mds[param],\n\u001b[1;32m    451\u001b[0m                                 tinp\u001b[38;5;241m=\u001b[39mtime,\n\u001b[1;32m    452\u001b[0m                                 zinp\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfull_like(ds[param], np\u001b[38;5;241m.\u001b[39mnan))\n\u001b[1;32m    453\u001b[0m \u001b[38;5;66;03m# param_results = climatology_test(c,\u001b[39;00m\n\u001b[1;32m    454\u001b[0m \u001b[38;5;66;03m#                                 inp=ds[param],\u001b[39;00m\n\u001b[1;32m    455\u001b[0m \u001b[38;5;66;03m#                                 tinp=time,\u001b[39;00m\n\u001b[1;32m    456\u001b[0m \u001b[38;5;66;03m#                                 zinp=ds['sea_water_pressure'])\u001b[39;00m\n\u001b[1;32m    457\u001b[0m \n\u001b[1;32m    458\u001b[0m \u001b[38;5;66;03m# Append the results\u001b[39;00m\n\u001b[1;32m    459\u001b[0m climatology_results\u001b[38;5;241m.\u001b[39mupdate({\n\u001b[1;32m    460\u001b[0m     param: param_results\n\u001b[1;32m    461\u001b[0m })\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/site-packages/ioos_qc/qartod.py:456\u001b[0m, in \u001b[0;36mclimatology_test\u001b[0;34m(config, inp, tinp, zinp)\u001b[0m\n\u001b[1;32m    453\u001b[0m inp \u001b[38;5;241m=\u001b[39m inp\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[1;32m    454\u001b[0m zinp \u001b[38;5;241m=\u001b[39m zinp\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[0;32m--> 456\u001b[0m flag_arr \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mcheck(tinp, inp, zinp)\n\u001b[1;32m    457\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m flag_arr\u001b[38;5;241m.\u001b[39mreshape(original_shape)\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/site-packages/ioos_qc/qartod.py:394\u001b[0m, in \u001b[0;36mClimatologyConfig.check\u001b[0;34m(self, tinp, inp, zinp)\u001b[0m\n\u001b[1;32m    391\u001b[0m suspect_idx \u001b[38;5;241m=\u001b[39m (inp \u001b[38;5;241m<\u001b[39m m\u001b[38;5;241m.\u001b[39mvspan\u001b[38;5;241m.\u001b[39mminv) \u001b[38;5;241m|\u001b[39m (inp \u001b[38;5;241m>\u001b[39m m\u001b[38;5;241m.\u001b[39mvspan\u001b[38;5;241m.\u001b[39mmaxv)\n\u001b[1;32m    393\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m np\u001b[38;5;241m.\u001b[39merrstate(invalid\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m--> 394\u001b[0m     flag_arr[(values_idx \u001b[38;5;241m&\u001b[39m fail_idx)] \u001b[38;5;241m=\u001b[39m QartodFlags\u001b[38;5;241m.\u001b[39mFAIL\n\u001b[1;32m    395\u001b[0m     flag_arr[(values_idx \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m~\u001b[39mfail_idx \u001b[38;5;241m&\u001b[39m suspect_idx)] \u001b[38;5;241m=\u001b[39m QartodFlags\u001b[38;5;241m.\u001b[39mSUSPECT\n\u001b[1;32m    396\u001b[0m     flag_arr[(values_idx \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m~\u001b[39mfail_idx \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m~\u001b[39msuspect_idx)] \u001b[38;5;241m=\u001b[39m QartodFlags\u001b[38;5;241m.\u001b[39mGOOD\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/contextlib.py:81\u001b[0m, in \u001b[0;36mContextDecorator.__call__.<locals>.inner\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(func)\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds):\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_recreate_cm():\n\u001b[0;32m---> 81\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/site-packages/numpy/ma/core.py:3387\u001b[0m, in \u001b[0;36mMaskedArray.__setitem__\u001b[0;34m(self, indx, value)\u001b[0m\n\u001b[1;32m   3384\u001b[0m     mval \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m([\u001b[38;5;28;01mFalse\u001b[39;00m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(_dtype\u001b[38;5;241m.\u001b[39mnames))\n\u001b[1;32m   3385\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _mask \u001b[38;5;129;01mis\u001b[39;00m nomask:\n\u001b[1;32m   3386\u001b[0m     \u001b[38;5;66;03m# Set the data, then the mask\u001b[39;00m\n\u001b[0;32m-> 3387\u001b[0m     _data[indx] \u001b[38;5;241m=\u001b[39m dval\n\u001b[1;32m   3388\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mval \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nomask:\n\u001b[1;32m   3389\u001b[0m         _mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mask \u001b[38;5;241m=\u001b[39m make_mask_none(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape, _dtype)\n",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
    "source": [
     "# Make this work with just one file, then we can scale up to a series of files\n",
     "for file in files:\n",
@@ -142,11 +159,11 @@
     "\n",
     "    # Run local QARTOD gross range and climatology tests\n",
     "    if len(test_parameters) > 0:\n",
-    "        gross_range_results = dp.qartod_gross_range_test(refdes, stream, test_parameters, ds)\n",
-    "        gross_range_results = dp.timeseries_dict_to_xarray(gross_range_results, ds)\n",
+    "        gross_range_results = qartod_gross_range_test(refdes, stream, test_parameters, ds)\n",
+    "        gross_range_results = timeseries_dict_to_xarray(gross_range_results, ds)\n",
     "        gross_range_results['deployment'] = ds['deployment'] # used in sorting and merging all deployments\n",
-    "        climatology_results = dp.qartod_climatology_test(refdes, stream, test_parameters, ds)\n",
-    "        climatology_results = dp.timeseries_dict_to_xarray(climatology_results, ds)\n",
+    "        climatology_results = qartod_climatology_test(refdes, stream, test_parameters, ds)\n",
+    "        climatology_results = timeseries_dict_to_xarray(climatology_results, ds)\n",
     "        climatology_results['deployment'] = ds['deployment']\n",
     "    else:\n",
     "        pass\n",
@@ -849,7 +866,7 @@
    ],
    "source": [
     "# Check that gross_range_results contains the tests results\n",
-    "gross_range_results = dp.qartod_gross_range_test(refdes, stream, test_parameters, ds)\n",
+    "gross_range_results = qartod_gross_range_test(refdes, stream, test_parameters, ds)\n",
     "gross_range_results"
    ]
   },
@@ -893,7 +910,7 @@
     }
    ],
    "source": [
-    "climatology_results = dp.qartod_climatology_test(refdes, stream, test_parameters, ds)\n",
+    "climatology_results = qartod_climatology_test(refdes, stream, test_parameters, ds)\n",
     "climatology_results"
    ]
   },
@@ -1323,7 +1340,7 @@
    ],
    "source": [
     "# Convert gross range results dictionary to a dataset with time coordinate\n",
-    "gr_ds = dp.timeseries_dict_to_xarray(gross_range_results, ds)\n",
+    "gr_ds = timeseries_dict_to_xarray(gross_range_results, ds)\n",
     "gr_ds"
    ]
   },
@@ -1334,7 +1351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr_results_path = dp.build_data_path(refdes,method,stream,(type+'-gr-result'),folder='processed') # Build path with filename to folder for saved results\n",
+    "gr_results_path = build_data_path(refdes,method,stream,(type+'-gr-result'),folder='processed') # Build path with filename to folder for saved results\n",
     "\n",
     "gr_ds.to_netcdf(gr_results_path)                                             # write netCDF file with results to processed data folder"
    ]
@@ -1760,7 +1777,7 @@
    ],
    "source": [
     "# Convert climatology results dictionary to a dataset with time coordinate\n",
-    "climatology_ds = dp.timeseries_dict_to_xarray(climatology_results, ds)\n",
+    "climatology_ds = timeseries_dict_to_xarray(climatology_results, ds)\n",
     "climatology_ds"
    ]
   },
@@ -1773,7 +1790,7 @@
    },
    "outputs": [],
    "source": [
-    "clim_results_path = dp.build_data_path(refdes,method,stream,('clim-result'),folder='interim') # Build path with filename to folder for saved results\n",
+    "clim_results_path = build_data_path(refdes,method,stream,('clim-result'),folder='interim') # Build path with filename to folder for saved results\n",
     "\n",
     "climatology_ds.to_netcdf(clim_results_path)                                                   # write netCDF file with results to processed data folder"
    ]
