--- a/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "from ooi_data_explorations.common import list_methods, list_streams, get_annotations, add_annotation_qc_flags, load_kdata\n",
     "\n",
-    "from ooinet import M2M\n",
+    "from ooinet import M2M # not sure if importing just M2M is correct/whether there is a class associated with this module\n",
     "\n",
     "from qartod_testing.plotting import nanfill_time_gaps"
    ]
