Show annotations needing updates in notebooks

--- a/notebooks/15-Deep-dive-GI01SUMO-SBD11-05-SPKIRB000.ipynb
+++ b/notebooks/15-Deep-dive-GI01SUMO-SBD11-05-SPKIRB000.ipynb
@@ -52,7 +52,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -568,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -576,16 +575,16 @@
     {
      "data": {
       "text/plain": [
-       "\"Deployment 16: * UPDATED 2022-09-19: The NSIF was powered on 2022-09-13 and configured to sample every 6 hours to conserve battery for the deployment. * The NSIF was powered off between 2022-09-08 due to the buoy's low power state.  No telemetered data expected for this time period. Instruments that do not collect data on battery power will have a gap in their recovered data for this period.\""
+       "'Deployment 6: DCL11 was locked up and non-responsive between 2020-04-21 and 2020-05-21. Instruments that do not collect data on battery power will have a gap in data for this period.'"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "annotations['annotation'][10]"
+    "annotations['annotation'][6]"
    ]
   },
   {
